# PaperFlow

./: .gitignore  App.tsx  README.md  README_zh.md  package-lock.json  package.json  types.ts
.github/workflows/: release.yml
services/: desktopService.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
