[package]
name = "localscholar"
version = "0.1.0"
edition = "2021"

[lib]
name = "localscholar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
walkdir = "2"
